Fixing bug with keyboard instead adding prompt to auto trigger keyboard on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,10 +38,6 @@ body {
   align-items: center;
 }
 
-.input {
-  visibility: hidden;
-}
-
 .item {
   width: 180px;
   height: 180px;
